Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/unicode/SupplementaryJavaID3.out
SupplementaryJavaID3.java:12:12: compiler.err.illegal.char: \ud801
SupplementaryJavaID3.java:12:18: compiler.err.illegal.char: \ud801
2 errors
